appId: con.example.awesome
---
- launchApp:
    clearState: true
- waitForAnimationToEnd
- assertVisible:
    text: "ユーザー一覧"
- tapOn:
    id: user-list-add
- waitForAnimationToEnd
- assertVisible:
    text: "ユーザー登録"
- tapOn:
    id: signup-email
- eraseText
- inputText: "maestro@example.com"
- tapOn:
    id: signup-name
- eraseText
- inputText: "E2Eユーザー"
- tapOn:
    id: signup-submit
- assertVisible:
    text: "登録完了"
- tapOn:
    text: "OK"
- waitForAnimationToEnd
- assertVisible:
    text: "E2Eユーザー"
